[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/PlayerController.gd" type="Script" id=1]
[ext_resource path="res://res/shaders/select_npc.material" type="Material" id=2]
[ext_resource path="res://res/Player_spriteframe.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/Scripts/PlayerInventory.tscn" type="PackedScene" id=4]
[ext_resource path="res://res/sprites/UI/war.png" type="Texture" id=5]
[ext_resource path="res://res/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://res/sprites/UI/peace.png" type="Texture" id=7]
[ext_resource path="res://scenes/Scripts/Interactable.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 2.3281

[sub_resource type="Animation" id=2]
resource_name = "FightOff"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/FightOff:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/FightOff:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/FightOn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/FightOff:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/FightOn:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.3, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/FightOn:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 3.86293

[sub_resource type="CapsuleShape2D" id=5]
radius = 5.58728
height = 0.19799

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )
material_on_mouse_entered = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )
animation = "W_FIGHT_MELEE_ATTACK"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.396357, 6.3323 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FightOff = SubResource( 2 )
anims/FightOn = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 0

[node name="PlayerInventory" parent="CanvasLayer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0

[node name="FightOn" type="Control" parent="CanvasLayer"]
editor/display_folded = true
visible = false
modulate = Color( 1, 1, 1, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/FightOn"]
margin_left = 525.264
margin_top = 487.904
margin_right = 625.264
margin_bottom = 592.904
texture = ExtResource( 5 )
stretch_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/FightOn"]
margin_left = 441.27
margin_top = 614.383
margin_right = 733.27
margin_bottom = 650.383
custom_fonts/font = ExtResource( 6 )
text = "Fight mode on"
align = 1
valign = 1

[node name="FightOff" type="Control" parent="CanvasLayer"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/FightOff"]
margin_left = 543.629
margin_top = 515.057
margin_right = 618.629
margin_bottom = 592.057
texture = ExtResource( 7 )
stretch_mode = 1

[node name="Label" type="Label" parent="CanvasLayer/FightOff"]
margin_left = 441.27
margin_top = 614.383
margin_right = 733.27
margin_bottom = 650.383
custom_fonts/font = ExtResource( 6 )
text = "Fight mode off"
align = 1
valign = 1

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1, -0.985252 )
current = true
zoom = Vector2( 0.15, 0.15 )
limit_left = -1000
limit_top = -1000
limit_right = 1000
limit_bottom = 1000
drag_margin_left = 0.3
drag_margin_top = 0.3
drag_margin_right = 0.3
drag_margin_bottom = 0.3
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="Interactable" parent="." instance=ExtResource( 8 )]
group_to_test_on_enter = "npc"

[node name="ActionArea" type="Area2D" parent="Interactable"]
position = Vector2( 0, 6.36 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/ActionArea"]
shape = SubResource( 4 )

[node name="MouseArea" type="Area2D" parent="Interactable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactable/MouseArea"]
position = Vector2( -0.095829, 1.62906 )
scale = Vector2( 0.79, 0.78 )
shape = SubResource( 5 )

[node name="Name" type="Label" parent="Interactable"]
visible = false
margin_left = -10.01
margin_top = -17.0
margin_right = 135.99
margin_bottom = 19.0
rect_scale = Vector2( 0.15, 0.15 )
custom_fonts/font = ExtResource( 6 )
text = "Player"
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="mouse_clicked" from="Interactable" to="." method="_on_Interactable_mouse_clicked"]
[connection signal="mouse_entered" from="Interactable" to="." method="_on_Interactable_mouse_entered"]
[connection signal="mouse_exited" from="Interactable" to="." method="_on_Interactable_mouse_exited"]
[connection signal="something_entered_inside_interactable" from="Interactable" to="." method="_on_Interactable_something_entered_inside_interactable"]
